Improvment to Diff API, adding an option to what strategy use > Coverage test on 93% within unit and integration
