# src/main/java/com/bmps/difftool/domain/ComparatorType.java
@@ -1,0 +1,5 @@
+package com.bmps.difftool.domain;
+
+public enum ComparatorType {
+    MYER, JSON_PATCH
+}
