# src/main/java/com/bmps/difftool/rest/DiffController.java
@@ -1,10 +1,11 @@
 package com.bmps.difftool.rest;
 
+import com.bmps.difftool.domain.ComparatorType;
 import com.bmps.difftool.domain.DiffObject;
-import com.bmps.difftool.domain.DiffObjectComparator;
+import com.bmps.difftool.domain.DiffObjectComparatorService;
 import com.bmps.difftool.domain.DiffObjectRepository;
 import com.bmps.difftool.exception.ClientException;
-import com.github.fge.jsonpatch.JsonPatchException;
+import com.github.difflib.algorithm.DiffException;
 import io.swagger.annotations.Api;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,21 +15,18 @@ import java.io.IOException;
 import java.util.UUID;
 
 @Api(value = "v1", description = "APIs REST to diff 2 previously reported content", basePath = "/api")
-@RestController
+@RestController("/api")
 public class DiffController {
 
     private final DiffObjectRepository diffObjectRepository;
-    private final DiffObjectComparator diffObjectComparator;
+    private final DiffObjectComparatorService diffObjectComparatorService;
 
-    public DiffController(DiffObjectRepository diffObjectRepository, DiffObjectComparator diffObjectComparator) {
+    public DiffController(DiffObjectRepository diffObjectRepository, DiffObjectComparatorService diffObjectComparatorService) {
         this.diffObjectRepository = diffObjectRepository;
-        this.diffObjectComparator = diffObjectComparator;
+        this.diffObjectComparatorService = diffObjectComparatorService;
     }
 
-    @RequestMapping(value = "/v1/diff/{id}/left",
-            produces = {"application/json"},
-            consumes = {"application/octet-stream"},
-            method = RequestMethod.POST)
+    @PostMapping(value = "/v1/diff/{id}/left", produces = {"application/json"}, consumes = {"application/octet-stream"})
     ResponseEntity<Void> persistLeftContent(@RequestBody byte[] leftObject,
                                             @PathVariable("id") UUID id) {
 
@@ -37,9 +35,7 @@ public class DiffController {
         return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
-    @RequestMapping(value = "/v1/diff/{id}/right",
-            consumes = {"application/octet-stream"},
-            method = RequestMethod.POST)
+    @PostMapping(value = "/v1/diff/{id}/right", consumes = {"application/octet-stream"})
     ResponseEntity<Void> persistRightContent(@RequestBody byte[] rightObject,
                                              @PathVariable("id") UUID id) {
 
@@ -47,12 +43,12 @@ public class DiffController {
         return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
-    @RequestMapping(value = "/v1/diff/{id}",
-            produces = {"application/json"},
-            method = RequestMethod.POST)
-    ResponseEntity<DiffOperationResponse> compareObjects(@PathVariable("id") UUID id) throws ClientException, IOException, JsonPatchException {
+    @PostMapping(value = "/v1/diff/{id}", produces = {"application/json"})
+    ResponseEntity<DiffOperationResponse> compareObjects(@PathVariable("id") UUID id,
+                                                         @RequestParam(value = "diffType", required = false, defaultValue = "MYER")
+                                                                 ComparatorType diffType)
+            throws ClientException, IOException, DiffException {
 
-        DiffOperationResponse response = new DiffOperationResponse();
-        return ResponseEntity.status(HttpStatus.OK).body(diffObjectComparator.compare(id));
+        return ResponseEntity.status(HttpStatus.OK).body(diffObjectComparatorService.compare(id, diffType));
     }
 }
